# verge

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  COPYING  DEVELOPMENT.md  Dockerfile  INSTALL  INSTALL.md  LICENSE  MODERNIZATION_SUMMARY.md  Makefile.am  PERFORMANCE_ANALYSIS.md  PHASE3_PULL_REQUEST.md  README.md  RPC.md  SECURITY.md  VERGEd  autogen.sh  background.tiff  complet  configure.ac  configure~  debian_ubuntu_install.sh  full-build-macos  go.sh  libvergeconsensus.pc.in  micro_benchmark.cpp  qrc_bitcoin.cpp  releases.txt  tor-am.patch  tor-or-am.patch  verge-qt.pro
src/: Lyra2.c  Lyra2.h  Lyra2RE.c  Lyra2RE.h  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Sponge.c  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alerter.cpp  alerter.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  blake2s-ref.c  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  (+192 more)
src/bench/: .gitignore  base58.cpp  bench.cpp  bench.h  bench_verge.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  examples.cpp  lockedpool.cpp  mempool_eviction.cpp  merkle_root.cpp  prevector.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: verge-config.h  verge-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/electrum/: electrs.cpp  electrs.h  electrumrpcinfo.cpp  electrumrpcinfo.h  electrumserver.cpp  electrumserver.h
src/index/: base.cpp  base.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/json/: json_spirit_writer_template.h
src/leveldb/: README.md  build_detect_platform
src/lz4/: lz4.c  lz4.h
src/m4/: ax_boost_base.m4  ax_pthread.m4  ax_subdirs_configure.m4  bitcoin_qt.m4
src/networking/: torEncoding.h  torcontrol.cpp  torcontrol.h  torcontroller.cpp  torcontroller.h  torencoding.cpp  torrelay.cpp  torrelay.h
src/node/: transaction.cpp  transaction.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/pos/: block.cpp  block.h  consensus.cpp  consensus.h  crypto.cpp  crypto.h  primitives.cpp  primitives.h  stake.cpp  stake.h  state.cpp  state.h  validation.cpp  validation.h  votepool.cpp  votepool.h  vrf.cpp  vrf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog - Copy.cpp  askpassphrasedialog - Copy.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoingui2.cpp  bitcoingui2.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  blockbrowser.cpp  blockbrowser.h  callback.h  chatwindow.cpp  chatwindow.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  (+128 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  vergeconsensus.cpp  vergeconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/smsg/: crypter.cpp  crypter.h  db.cpp  db.h  keystore.cpp  keystore.h  net.h  rpcsmessage.cpp  rpcsmessage.h  smessage.cpp  smessage.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile.am  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  canonical_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  flatfile_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  (+51 more)
src/tor/: Makefile.nmake  address.c  address.h  aes.c  anonymize.P  anonymize.cpp  anonymize.h  backtrace.c  buffers.c  channel.c  channel.h  circuitbuild.c  common_sha1.i  compat.c  compat_libevent.c  config.c  connection.c  connection_edge.c  connection_or.c  container.c  container.h  control.c  cpuworker.c  crypto.c  crypto_curve25519.c  crypto_format.c  di_ops.c  directory.c  dirserv.c  dns.c  dnsserv.c  entrynodes.c  eventdns_tor.h  ext_orport.c  hibernate.c  log.c  memarea.c  mempool.c  networkstatus.c  nodelist.c  (+29 more)
src/univalue/: configure~
src/util/: bytevectorhash.cpp  bytevectorhash.h  memory.h  moneystr.cpp  moneystr.h  spanparsing.cpp  spanparsing.h  strencodings.cpp  strencodings.h  system.cpp  (+3 more)
(+908 files in other folders)
